tests/fixtures/invalid/pow_none_set_bool.py
# Cannot call pow() with None, Set[int], Bool
x = pow(None, {1, 2, 3}, True)
